[package]
name = "saoirse"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
dotenv = "^0.15"
log = "^0.4"
serde = { version = "^1", features = ["derive"] }
sqlx = { version = "^0.3", default-features = false, features = ["macros", "runtime-tokio"] }
thiserror = "^1"
tokio = { version = "^0.2", features = ["macros"]}
warp = "^0.2"
