[package]
name = "saoirse"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
dotenv = "^0.15"
jsonwebtoken = "^7"
log = "^0.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlx = { version = "^0.3", default-features = false, features = ["json", "macros", "postgres", "runtime-tokio", "uuid"] }
thiserror = "^1"
tokio = { version = "^0.2", features = ["macros"] }
uuid = { version = "^0.8", features = ["serde"] }
warp = "^0.2"
